--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
-    "pack": "electron-builder --x64 --macos",
+    "packing": "electron-builder --x64 --macos",
     "ship": "electron-builder --x64 --macos --win -p always"
   },
   "eslintConfig": {
