--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lets-work-app",
   "productName": "Lets Work",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "App to easily open work tools and make your life easier !",
   "private": true,
   "author": "Magelan",
@@ -16,7 +16,7 @@
     "antd": "^3.10.3",
     "electron-is-dev": "^1.0.1",
     "electron-log": "^2.2.17",
-    "electron-updater": "^3.2.3",
+    "electron-updater": "^4.0.4",
     "node-osascript": "^2.1.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -29,7 +29,8 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
-    "packing": "electron-builder --x64 --macos",
+    "test-packaging": "DEBUG=electron-builder electron-builder --dir",
+    "packaging": "electron-builder --x64 --macos",
     "ship": "electron-builder --x64 --macos --win -p always"
   },
   "eslintConfig": {
