--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
   "singleQuote": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "semi": false,
   "tabWidth": 2,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "arrowParens": "avoid",
-  "printWidth": 120,
-  "bracketSpacing": false
+  "printWidth": 80,
+  "bracketSpacing": true
 }
