add parameter in electron-builder to support dark mode

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -8,6 +8,7 @@ directories:
 mac:
   category: public.app-category.productivity
   icon: build/icons/macOS/Icon.icns
+  darkModeSupport: true
   target:
     - dmg
     - zip
